--- a/TuscanyVilla/TuscanyVilla.csproj
+++ b/TuscanyVilla/TuscanyVilla.csproj
@@ -97,10 +97,14 @@
     <Content Include="images\314-348x348.jpg" />
     <Content Include="images\3b-348x348.jpg" />
     <Content Include="images\42-348x348.jpg" />
+    <Content Include="images\blank_Slate.jpg" />
+    <Content Include="images\bluebox.jpg" />
     <Content Include="images\box_partners.png" />
+    <Content Include="images\partners.jpg" />
     <Content Include="images\tuscany-villas-sant-anna.jpg" />
     <Content Include="images\Versilia.jpg" />
     <Content Include="images\Villa-Rucellai-Toscani-2750-2-348x348.jpg" />
+    <Content Include="images\Villa-Rucellai-Toscani-2812-2-348x348.jpg" />
     <Content Include="images\Villa-Vanna-231-348x348.jpg" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
